# symbolic-ontology-mcp

./: .dockerignore  .gitignore  COMMERCIAL_LICENSE.md  Cargo.toml  Dockerfile  LICENSE.md  MCP_API_DOCS.md  MCP_CURSOR_WORKAROUND.md  MCP_SERVER_IMPLEMENTATIONS.md  PROJECT_STATUS.md  README.md  README_SEEDER.md  REFACTORING.md  RELEASE_PLAN.md  TASKS.md  check-refactoring.sh  checklist.md  diff-to-commit  docker-compose.yml  fly.toml  foundational-checklist.md  implement-and-test.md  mcps-symbolic-reasoning.md  migrate-tests.sh  rename_client.sh  requirements.md  tarpaulin-report.html  tower-requirements.md  updated-checklist.md
data/: myth-symbol-seed.json  sample_dream_symbols.csv
docs/: README.md  api_test_requests.md  architecture.md  cursor-mcp-integration.md  development-checklist.md  mcp-dream-ontology-investigation.md  mcp-prompt-templates.md  mcp-sdk-checklist.md  mcp_error_codes.md  mcp_implementation.md  missing-requirements.md  mvp-roadmap.md  smoke-test-checklist.md  v1.5-checklist.md
docs/architecture/: architecture.md  backend-tech-stack.md  overview.md  requirements.md  tech-stack.md  vector-db-architecture.md  vectord-db.md
docs/backlog/: future-development.md  tower-requirements.md
docs/completed/: foundational-checklist.md  updated-checklist.md
docs/dev-docs/: api_test_requests.md
docs/development/: implementation-guide.md  v2-roadmap.md
docs/research/: Expanded_Peer_Reviewed_Papers.md  Symbolic_AI_Paper_Collection.md  capstone-topics.md  mcps-symbolic-reasoning.md  ontology-research.md  papers.md  rust-papers.md  symbolic-reasoning.md
docs/usage/: mcp-prompt-templates.md
docs/v2/: analysis.md  inspection.md  layered-interpretation.md
dream-mcp-client/: Cargo.toml  README.md
dream-mcp-client/src/: main.rs
ontology-api-server/: Cargo.toml  README.md
ontology-api-server/src/: config.rs  logging.rs  main.rs
ontology-api-server/src/api/: error.rs  handlers.rs  mod.rs  routes.rs  state.rs
ontology-api-server/src/routes/: mod.rs  symbols.rs
ontology-api-server/tests/: lib.rs
ontology-api-server/tests/api/: mod.rs  routes_tests.rs
ontology-core/: Cargo.toml  README.md
ontology-core/src/: db.rs  domain.rs  lib.rs  utils.rs
ontology-core/src/db/: mod.rs  models.rs  pool.rs  queries.rs  schema.rs
ontology-core/src/db/repository/: factory.rs  interfaces.rs  mod.rs  symbol_repository.rs  symbol_set_repository.rs
ontology-core/src/domain/: mod.rs  ontology.rs  symbols.rs
ontology-core/tests/: lib.rs
ontology-core/tests/common/: fixtures.rs  mock_repository.rs
ontology-core/tests/db/: mod.rs
ontology-core/tests/db/repository/: factory_tests.rs  mod.rs  symbol_repository_tests.rs  symbol_set_repository_tests.rs
ontology-core/tests/domain/: fixtures.rs  mod.rs  ontology_tests.rs  symbol_tests.rs  symbolset_tests.rs
scripts/: download_dream_datasets.sh  run_servers.sh  seed_mythological.sh  test_api.sh  test_mcp.rs
src/: config.rs  lib.rs  logging.rs  main.rs  utils.rs
src/api/: error.rs  handlers.rs  mod.rs  routes.rs  state.rs
src/db/: mod.rs  models.rs  pool.rs  queries.rs  schema.rs
src/db/repository/: factory.rs  interfaces.rs  mod.rs  symbol_repository.rs  symbol_set_repository.rs
src/domain/: mod.rs  ontology.rs  repository.rs  symbols.rs  types.md
src/infrastructure/: memory_repository.rs  mod.rs  postgres_repository.rs
src/llm/: client.rs  mod.rs  prompts.rs
src/mcp/: mod.rs  schema.rs  service.rs
src/mcp/methods/: filter_by_category.rs  get_symbols.rs  mod.rs  search_symbols.rs
src/utils/: mod.rs
symbol-mcp-client/: Cargo.toml  README.md
symbol-mcp-client/src/: lib.rs  main.rs
symbol-mcp-client/src/mcp/: mod.rs  schema.rs  service.rs  test_utils.rs
symbol-mcp-client/src/mcp/methods/: filter_by_category.rs  get_symbols.rs  mod.rs  search_symbols.rs  utils.rs
symbol-mcp-client/tests/: lib.rs
symbol-mcp-client/tests/mcp/: mod.rs  service_tests.rs
tests/: README.md  TESTING_SUMMARY.md  lib.rs
tests/api/: handlers_tests.rs  mod.rs
tests/common/: fixtures.rs  mock_repository.rs  mod.rs
tests/db/: mod.rs
tests/db/repository/: factory_tests.rs  mod.rs  symbol_repository_tests.rs  symbol_set_repository_tests.rs
tests/domain/: mod.rs  ontology_tests.rs  symbol_tests.rs  symbolset_tests.rs
tests/llm/: client_tests.rs  mod.rs  prompts_tests.rs
tests/mcp/: get_symbols_tests.rs  mod.rs  service_tests.rs
