[package]
name = "dream-mcp-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP client for the Dream Ontology symbolic reasoning engine"
repository = "https://github.com/yogimathius/symbolic-ontology-mcp"
readme = "README.md"
keywords = ["dream", "symbolism", "ontology", "mcp", "claude"]
categories = ["api-bindings", "command-line-utilities"]

# This is the crate we DO publish
# publish = true is the default, so no need to specify

[dependencies]
# Minimal dependencies needed for the client
clap = { version = "4.4", features = ["derive", "env"] }
rmcp = { version = "0.1.5", features = ["client", "transport-sse-server"] }
tokio = { version = "1.44.2", features = ["rt", "macros", "signal"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"

# Create a binary
[[bin]]
name = "dream-mcp"
path = "src/main.rs" 