[package]
name = "ontology-api-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false  # Prevents accidental publishing

[dependencies]
# Core library
ontology-core = { path = "../ontology-core" }

# Server dependencies
anyhow = "1.0.98"
axum = "0.8.3"
axum-macros = "0.5.0"
dotenvy = "0.15"
clap = { version = "4.4", features = ["derive"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
tokio = { version = "1.44.2", features = ["full", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
fern = "0.7.1"
humantime = "2.2.0"
log = "0.4.27"

# Database
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json", "uuid", "macros"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Authentication and security
jsonwebtoken = "9.1.0"

# MCP dependencies
rmcp = { version = "0.1.5" }

[dev-dependencies]
tokio-test = "0.4.4"
tower = "0.5.2" 