[package]
name = "ontology-api-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "API server for the Symbol Ontology symbolic reasoning engine"
repository = "https://github.com/yogimathius/symbolic-ontology-mcp"
readme = "README.md"
keywords = ["symbol", "symbolism", "ontology", "api", "server"]
categories = ["web-programming::http-server"]
publish = false  # Prevents accidental publishing

[dependencies]
# Internal
ontology-core = { path = "../ontology-core" }

# Async runtime
tokio = { version = "1.44.2", features = ["full", "macros"] }
tokio-stream = "0.1.15"
tokio-tungstenite = "0.21.0"

# Web framework
axum = "0.8.3"
axum-macros = "0.5.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }

# Serialization
serde = "1.0.219"
serde_json = { version = "1.0.140", features = ["preserve_order"] }

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Futures
futures = "0.3.30"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# MCP server
rmcp = { version = "0.1.5", features = ["server", "transport-sse-server", "transport-sse"] }

# Command line parsing
clap = { version = "4.4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }

# Utilities
uuid = { version = "1.7.0", features = ["v4"] }
pin-project-lite = "0.2.13"
async-trait = "0.1.88"

# Required for transitive dependencies
defer-rs = "0.1.0"
cfg-if = "1.0.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json", "uuid", "time", "sqlite"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
async-trait = "0.1.88"
tokio-test = "0.4.4" 
