[package]
name = "ontology-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for the Symbol Ontology symbolic reasoning engine"
repository = "https://github.com/yogimathius/symbolic-ontology-mcp"
readme = "README.md"
keywords = ["symbol", "symbolism", "ontology", "reasoning"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { version = "1.44.2", features = ["full", "macros"] }
tokio-stream = "0.1.15"

# Web framework
axum = "0.8.3"
axum-macros = "0.5.0"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }

# Serialization
serde = "1.0.219"
serde_json = { version = "1.0.140", features = ["preserve_order"] }

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Futures
futures = "0.3.30"

# UUID generation
uuid = { version = "1.7.0", features = ["v4"] }

# Async traits
async-trait = "0.1.88"

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }

# MCP client
rmcp = { version = "0.1.5", features = ["server", "transport-sse-server", "transport-sse", "client"] }

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json", "uuid", "time", "sqlite"] }
pgvector = { version = "0.4", features = ["sqlx"] }
log = "0.4.27"
csv = "1.2"
zip = "0.6"
tokio-util = { version = "0.7.15", features = ["full"] }
fern = "0.7.1"
humantime = "2.2.0"

# Utilities
pin-project-lite = "0.2.13"
tokio-tungstenite = "0.21.0"

# Language tags
language-tags = "0.3.2"

# Random
rand = "0.8.5"

# Crypto
sha2 = "0.10.8"
base64 = "0.21.7"

# Required for transitive dependencies
defer-rs = "0.1.0"
cfg-if = "1.0.0"

# Command line arguments (for seeder)
clap = { version = "4.5.6", features = ["derive"] }
tokio-postgres = "0.7.13"

[dev-dependencies]
tokio-test = "0.4.4" 
tower = "0.5.2" 

[[bin]]
name = "seeder"
path = "src/bin/seeder.rs" 
