[package]
name = "symbol-mcp-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP client for the Symbol Ontology symbolic reasoning engine"
repository = "https://github.com/yogimathius/symbolic-ontology-mcp"
readme = "README.md"
keywords = ["symbol", "symbolism", "ontology", "mcp", "claude"]
categories = ["api-bindings", "command-line-utilities"]

# This is the crate we DO publish
# publish = true is the default, so no need to specify

[dependencies]
# Core library (optional with features to minimize public exposure)
ontology-core = { path = "../ontology-core", optional = true }

# Minimal dependencies needed for the client
clap = { version = "4.4", features = ["derive", "env"] }
rmcp = { version = "0.1.5", features = ["client", "transport-sse", "server", "transport-sse-server"] }

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Serialization
serde = "1.0.219"
serde_json = { version = "1.0.140", features = ["preserve_order"] }

# Async runtime
tokio = { version = "1.44.2", features = ["full", "macros"] }
tokio-stream = "0.1.15"
tokio-tungstenite = "0.21.0"

# Futures
futures = "0.3.30"

# HTTP client for API interactions
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Utilities
pin-project-lite = "0.2.13"
uuid = { version = "1.7.0", features = ["v4"] }
async-trait = "0.1.88"

# Environment variables
dotenvy = "0.15"

# Web framework
axum = "0.8.3"
axum-macros = "0.5.0"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }

# Required for transitive dependencies
defer-rs = "0.1.0"
cfg-if = "1.0.0"
tokio-util = { version = "0.7.15", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
tokio-test = "0.4.4"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }

# Features
[features]
# Feature to expose the core library types
core = ["ontology-core"]
# Default features
default = ["ontology-core"]
ontology-core = ["dep:ontology-core"]
local = []

# Create a binary
[[bin]]
name = "symbol-mcp"
path = "src/main.rs" 
